--- a/pizzapastawebtemplate/css/style.css
+++ b/pizzapastawebtemplate/css/style.css
@@ -1,4 +1,5 @@
 /* Website template by freewebsitetemplates.com */
+/*position=static is the same as position=relative, because relative needs parameters*/
 
 #myTry{
 	float:left;
@@ -8,14 +9,6 @@
 	font-size: 20px;
 	list-style: none;
 	line-height: 56px; 
-}
-#myTry ul li a{
-	color: black;
-	display: block;
-	padding: 0 60px;
-	text-shadow: 1px 1px 0 #e3e3e3;
-	text-decoration: none;
-	text-transform: capitalize;
 }
 #circle {
       width: 400px;
@@ -35,7 +28,6 @@ body {
 	margin: 0;
 	min-width: 960px;
 	padding: 0;
-	
 }
 ul
 {
